		most people don't need it.
		Starting utilities is now more relaxed using a 3 seconds
		pause timer. Fixed some potential Sparc problems.
		On new systems, all paths for MBSE are now created in the
		/opt/mbse root.
		When scanning outbound, flags are set if flo or mail pkt files
		are present.
		When the internet connection status changes, the outbound is
		rescanned.

	mbmon:
		Changed the lastcaller screen to display the External Door
		information.
		When lastcaller info is scrolling, the lines are first proper
		erased.
		Fixes for Sparc systems.

	mbmsg:
		Corrected header in logfile for pack function.
		Fixes for Sparc systems.

	import:
		Removed users import, could not work anymore.

	mbfido:
		When running in mbmail mode, it will try to get the lock on
		the program for 10 minutes before aborting and waits until
		another mbfido program is ready.
		Fixed the problem that the KillSent flag was set on processed
		netmail.
		Reset the KillSent and Hold flags when storing netmail in the
		message base.
		The tic file import function now sorts and tests on long file-
		names, with the new mangle function an DOS 8.3 filename is
		also stored in the file database.
		For all files received in tic area, the crc of the tic area
		name is stored in the filerecord. This is for the future 
		rescan option.
		Implemented long filenames with hatch. Now uses ticfile key-
		word Fullname for the long filename.
		Fixes for Sparc systems.
		File forwarding now really depends on the downlink billing
		flag.

	mbfile:
		During check the file databases are reset to filemode 0660.
		Implemented "mbfile adopt" function.
		Started working on long filename support. The real name on
		disk is the long filename, the database records also holds
		an uppercase mangled 8.3 filename. In most cases this is just
		the same name in upper and lowercase. Name mangling like Win$
		is performed on the long filenames.
		Implemented "mbfile import" function, this imports complete