@@ -79,9 +79,9 @@ nodelist.o: libs.h ../lib/structs.h taskutil.h nodelist.h
 scanout.o: libs.h ../lib/structs.h taskutil.h scanout.h
 taskcomm.o: libs.h taskstat.h taskregs.h taskdisk.h taskinfo.h taskutil.h taskcomm.h
 taskinfo.o: libs.h ../lib/structs.h taskinfo.h
-taskstat.o: libs.h ../lib/structs.h taskstat.h outstat.h taskutil.h
-mbtask.o: libs.h ../lib/structs.h signame.h taskstat.h taskutil.h taskregs.h taskcomm.h outstat.h nodelist.h mbtask.h
-outstat.o: libs.h ../lib/structs.h taskutil.h scanout.h nodelist.h callstat.h outstat.h
+taskstat.o: libs.h ../lib/structs.h taskstat.h callstat.h outstat.h taskutil.h
+mbtask.o: libs.h ../lib/structs.h signame.h taskstat.h taskutil.h taskregs.h taskcomm.h callstat.h outstat.h nodelist.h mbtask.h
+outstat.o: libs.h ../lib/structs.h taskutil.h taskstat.h scanout.h nodelist.h callstat.h outstat.h
 signame.o: signame.h
 taskdisk.o: libs.h taskdisk.h taskutil.h
 taskregs.o: libs.h taskstat.h taskregs.h taskutil.h
